--- a/ServicuerosSA/appsettings.json
+++ b/ServicuerosSA/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;uid=sa;pwd=123;database=ServicuerosMVC"
+    "DefaultConnection": "Server=.;uid=sa;pwd=123;database=ServicuerosMVC",
+    
   },
   "Logging": {
     "IncludeScopes": false,
